fix: not very good fix for overflow in heading text

--- a/src/components/SiteHeading/siteHeading.css
+++ b/src/components/SiteHeading/siteHeading.css
@@ -34,6 +34,8 @@
 
         &__text {
             margin: 0; /* remove margin from h2 tag */
+            max-width: 100%;
+            overflow: hidden;
 
             position: relative;
             bottom: calc(var(--row-height) / 1.83);
